# book-of-shadows-terminal

./: CMakeLists.txt  README.md  main.cpp
include/controllers/: colourcontroller.h  correspondancecontroller.h  godcontroller.h  herbcontroller.h  planetcontroller.h  polaritycontroller.h  runestonecontroller.h  tarotcontroller.h  treecontroller.h  zodiaccontroller.h
include/database/: database.h  sqldata.h
include/menu/: menu.h  option.h
include/model/: baseentity.h  colour.h  god.h  herb.h  planet.h  polarity.h  runestone.h  tarotcard.h  tree.h  zodiac.h
include/view/: menu.h  view.h
model/: baseentity.cpp  baseentity.h  colour.cpp  colour.h  god.cpp  herb.cpp  planet.cpp  planet.h  polarity.cpp  polarity.h  runestone.cpp  runestone.h  tarotcard.cpp  tarotcard.h  tree.cpp  tree.h  zodiac.cpp  zodiac.h
src/: CMakeLists.txt  main.cpp
src/controllers/: colourcontroller.cpp  correspondancecontroller.cpp  godcontroller.cpp  herbcontroller.cpp  planetcontroller.cpp  polaritycontroller.cpp  runestonecontroller.cpp  tarotcontroller.cpp  treecontroller.cpp  zodiaccontroller.cpp
src/database/: database.cpp  sqldata.cpp
src/menu/: menu.cpp  option.cpp
src/model/: baseentity.cpp  colour.cpp  god.cpp  herb.cpp  planet.cpp  polarity.cpp  runestone.cpp  tarotcard.cpp  tree.cpp  zodiac.cpp
src/view/: input.cpp  menu.cpp  view.cpp
